<resources>
    <string name="app_name">EazyLivings</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="new_user">New To EazyLivings?</string>
    <string name="password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enterEmail">Email</string>
    <string name="email_address">Email Address</string>
    <string name="continueSignup">Continue</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="setPassword">Set Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register">Register</string>
    <string name="user_name">Enter email/mobile</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="title_activity_over_flow">OverFlow</string>

    <string name="user_profile">User Profile</string>
    <string name="log_out">LogOut</string>
    <string name="log_in">LogIn</string>
    <string name="update_profile">Update Profile</string>
    <string name="your_preferences">Your Preferences</string>
    <string name="go_back">Go Back</string>
    <string name="preferences">Preferences</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="loginpagedesc">Please enter your registered Email Id/Mobile Number and password to login to your eazylivings account</string>
    <string name="signuppagedesc">Please enter following details to join EazyLivings family</string>
    <string name="signin">SignIn</string>
    <string name="moving_to_a_new_flat">Moving to a New Flat?</string>
    <string name="let_apos_s_get_started">Let\'s Get Started</string>
    <string name="we_are_solution_to_your_chaotic_yet_essential_daily_tasks">We Are Solution To Your Chaotic Yet Essential Daily Tasks</string>
    <string name="neither_we_are_service_providers">Neither We Are Service Providers</string>
    <string name="we_are_not_packers_or_movers">We Are Not Packers or Movers</string>
    <string name="let_me_choose">Let Me Choose</string>
    <string name="already_part_of_eazylivings">Already part of EazyLivings?</string>

</resources>
