<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eazylivings.activities.login.SignIn">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/loginpagedesc"
        android:id="@+id/loginPage_text_view_details_desc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="1dp"
        android:layout_alignBottom="@+id/loginPage_progressBar_progress" />

    <EditText
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:id="@+id/loginPage_editText_userName"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:textColor="#000000"
        android:hint="@string/user_name"
        android:background="@drawable/rounded_edittext"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:id="@+id/loginPage_editText_password"
        android:gravity="center"
        android:hint="@string/password"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/loginPage_editText_userName"
        android:layout_centerHorizontal="true"
       />

    <Button
        android:layout_height="50dp"
        android:layout_width="360dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/loginPage_imageButton_signIn"
        android:onClick="onClickLoginButton"
        android:background="#2E9AFE"
        android:textColor="@drawable/button_text_color"
        android:layout_below="@+id/loginPage_editText_password"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:textSize="18dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15dp"
        android:gravity="center_horizontal"
        android:text="@string/new_user"
        android:id="@+id/loginPage_textView_register_new_user"
        android:onClick="onClickRegisterButton"
        android:textColor="#000000"
        android:layout_below="@+id/loginPage_imageButton_signIn"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/signup"
        android:id="@+id/loginPage_textView_register_new_user_text_signup"
        android:onClick="onClickRegisterButton"
        android:textColor="#FF0000"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/loginPage_textView_register_new_user"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp"
        android:text="@string/forgot_password"
        android:id="@+id/loginPage_textView_forgotPassword"
        android:onClick="onClickForgotPassword"
        android:textColor="#2E9AFE"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginPage_progressBar_progress"
        android:layout_marginBottom="50dp"
        android:layout_alignBottom="@+id/loginPage_editText_userName"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
