<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eazylivings.activities.login.SignIn">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signuppagedesc"
        android:id="@+id/loginPage_text_view_details_desc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_alignBottom="@+id/loginPage_progressBar_progress" />

    <EditText
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:id="@+id/SignUpPage_editText_Name"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:textColor="#000000"
        android:hint="@string/name"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/loginPage_text_view_details_desc"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:id="@+id/SignUpPage_editText_PhoneNo"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="#000000"
        android:hint="@string/mobile"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/SignUpPage_editText_Name"
        android:layout_centerHorizontal="true" />


    <EditText
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:id="@+id/SignUpPage_editText_email"
        android:gravity="center"
        android:hint="@string/enterEmail"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/SignUpPage_editText_PhoneNo"
        android:layout_centerHorizontal="true"
         />

    <EditText
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:id="@+id/SignUpPage_editText_password"
        android:gravity="center"
        android:hint="@string/setPassword"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/SignUpPage_editText_email"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_height="50dp"
        android:layout_width="360dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/loginPage_imageButton_signIn"
        android:onClick="onClickLoginButton"
        android:background="#2E9AFE"
        android:textColor="@drawable/button_text_color"
        android:layout_below="@+id/SignUpPage_editText_password"
        android:layout_marginTop="25dp"
        android:text="@string/continueSignup"
        android:layout_centerHorizontal="true"
        android:textSize="18dp"/>


</RelativeLayout>
